[metadata]
name = starfish
version = 0.0.5
summary = Inspur Starfish Scalable Load Balancer Framework as a Service
description-file =
    README.md
author = Inspur JayLiu
author-email = liujiye@inspur.com
home-page = https://docs.openstack.org/octavia/latest/
python-requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[global]
setup-hooks = pbr.hooks.setup_hook


[files]
packages =
    starfish

[entry_points]
wsgi_scripts =
    starfish-wsgi = starfish.frame_api.app:setup_app
console_scripts =
    starfish-api = starfish.cmd.api:main
    starfish-worker = starfish.cmd.octavia_worker:main
    amphora-agent = starfish.cmd.agent:main
starfish.api.drivers =
    test_provider = starfish.frame_api.driver.provider:TestProviderDriver
starfish.amphora.drivers =
    amphora_rest_driver = starfish.amphorae.drivers.rest_api_driver:RestDriverTest
starfish.plugins =
    hot_plug_plugin = starfish.controller.worker.v1.controller_worker:ControllerWorker

